sites/website/src/docs/3.x/api/fast-element.fastelementconstructor.md
---
id: "fast-element.fastelementconstructor"
title: "FASTElementConstructor interface"
layout: 3x-api
eleventyNavigation:
  key: "api3xfast-element.fastelementconstructor"
  parent: "api3xfast-element"
  title: "FASTElementConstructor interface"
navigationOptions:
  activeKey: "api3xfast-element.fastelementconstructor"
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[@microsoft/fast-element](../fast-element/index.html) &gt; [FASTElementConstructor](../fast-element.fastelementconstructor/index.html)

## FASTElementConstructor interface

The FASTElement constructor and static registration helpers.

**Signature:**

```typescript
export interface FASTElementConstructor
```

## Methods

<table><thead><tr><th>

Method


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[(new)()](../fast-element.fastelementconstructor._new_/)


</td><td>

Creates a FASTElement instance.


</td></tr>
<tr><td>

[compose(this, nameOrDef)](../fast-element.fastelementconstructor.compose/)


</td><td>

Composes FASTElement metadata without registering the element.


</td></tr>
<tr><td>

[compose(this, nameOrDef)](../fast-element.fastelementconstructor.compose_1/)


</td><td>

Composes element metadata into a FASTElementDefinition instance.


</td></tr>
<tr><td>

[compose(type, nameOrDef)](../fast-element.fastelementconstructor.compose_2/)


</td><td>

Composes FASTElement metadata into a FASTElementDefinition instance.


</td></tr>
<tr><td>

[compose(type, nameOrDef)](../fast-element.fastelementconstructor.compose_3/)


</td><td>

Composes FASTElement metadata into a FASTElementDefinition instance.


</td></tr>
<tr><td>

[define(this, nameOrDef, extensions)](../fast-element.fastelementconstructor.define/)


</td><td>

Defines a platform custom element based on the provided type and definition.


</td></tr>
<tr><td>

[define(type, nameOrDef, extensions)](../fast-element.fastelementconstructor.define_1/)


</td><td>

Defines a platform custom element based on the provided type and definition.


</td></tr>
<tr><td>

[from(BaseType)](../fast-element.fastelementconstructor.from/)


</td><td>

Creates a new FASTElement base class inherited from the provided base type.


</td></tr>
</tbody></table>
